--- a/src/turtlebot3_simulations-master/turtlebot3_gazebo/CMakeLists.txt
+++ b/src/turtlebot3_simulations-master/turtlebot3_gazebo/CMakeLists.txt
@@ -59,6 +59,11 @@ add_executable(turtlebot3_drive src/turtlebot3_drive.cpp)
 add_dependencies(turtlebot3_drive ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(turtlebot3_drive ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
+# Añadir el plugin RotatePlugin
+add_library(RotatePlugin SHARED src/RotatePlugin.cpp)
+target_link_libraries(RotatePlugin ${GAZEBO_LIBRARIES} ${catkin_LIBRARIES})
+
+
 ################################################################################
 # Install
 ################################################################################
